APF-2567 Expose all capabilities related to the ticket-flow.